--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@-v2
     - name: Setup Node.js environment
-  uses: actions/setup-node@v2-beta
- with:
+ - uses: actions/setup-node@v2-beta
+  with:
   version: 12
 - name: GitHub Action for Yarn
   uses: Borales/actions-yarn@v2.1.0  
